--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         </div>
         <div class="nav-right">
             <a href="cart.html" class="cart-btn">🛒 Cart (0)</a>
-            <a href="main.html" class="home-btn">Home</a>
+            <a href="index.html" class="home-btn">Home</a>
         </div>
     </nav>
     
