--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="header-center">
-        <a href="main.html">
+        <a href="index.html">
             <img src="imgs/chatgpt.png" alt="Site Logo" class="site-logo">
         </a>
     </div>
